--- a/translate-server/src/main/resources/application-proxy.yml
+++ b/translate-server/src/main/resources/application-proxy.yml
@@ -1,5 +1,5 @@
 translate:
   you_dao:
     url: https://openapi.youdao.com/api
-    app_key: 551b93db1a141317
-    app_secret: RmngCqUDX2zKhWWE5KPFYDG3wbuH0JQt
+    app_key: xxxxx
+    app_secret: xxxxxx
